data/all_generated_tests/raw_wast_tests/return_InfiniteLoops_2738.wast
;; 7. **Conditional `br_if` and Stack-Pushed Return Conditions**:    Implement a function where the loop conditionally pushes values onto the stack based on a `br_if` evaluation, and then perform a `return`. This highlights possible issues where incorrect stack management on conditional branches can cause improper execution of `return`, leading to infinite loops.

(assert_invalid
  (module
    (func $conditional-br_if-stack-return (param i32) (result i32)
      (local i32)
      (i32.const 1)
      (if (result i32)
        (then
          (br_if 0 (i32.const 1) (local.get 0))
          (return)
        )
      )
    )
  )
  "type mismatch"
)